--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>About Me</title>
-  <link rel="stylesheet" href="assets/bootstrap-5.3.3-dist/css/bootstrap-grid.css">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css">
 </head>
 
 <body class="bg-dark text-light">
@@ -111,90 +111,29 @@
       </tbody>
     </table>
   </section>
-  <section id="galeri-foto" class="container mt-5">
-    <h2 style="color: white;">Foto</h2>
-    <div class="row">
-      <div class="col-6 col-md-3 mb-4">
-        <div style="width: 100%; height: 200px; overflow: hidden;">
-          <img src="Gambar 1.jpeg" style="object-fit: cover; width: 100%; height: 100%; cursor: pointer;" alt="Foto 1"
-            data-bs-toggle="modal" data-bs-target="#foto1Modal">
-        </div>
+  <div id="carouselExample" class="carousel slide">
+    <div class="carousel-inner">
+      <div class="carousel-item active">
+        <img src="Gambar 1.jpeg" class="d-block w-100" alt="...">
       </div>
-      <div class="col-6 col-md-3 mb-4">
-        <div style="width: 100%; height: 200px; overflow: hidden;">
-          <img src="Gambar 2.jpeg" style="object-fit: cover; width: 100%; height: 100%; cursor: pointer;" alt="Foto 2"
-            data-bs-toggle="modal" data-bs-target="#foto2Modal">
-        </div>
+      <div class="carousel-item">
+        <img src="Gambar 2.jpeg" class="d-block w-100" alt="...">
       </div>
-      <div class="col-6 col-md-3 mb-4">
-        <div style="width: 100%; height: 200px; overflow: hidden;">
-          <img src="Gambar 3.jpeg" style="object-fit: cover; width: 100%; height: 100%; cursor: pointer;" alt="Foto 3"
-            data-bs-toggle="modal" data-bs-target="#foto3Modal">
-        </div>
+      <div class="carousel-item">
+        <img src="Gambar 3.jpeg" class="d-block w-100" alt="...">
       </div>
-      <div class="col-6 col-md-3 mb-4">
-        <div style="width: 100%; height: 200px; overflow: hidden;">
-          <img src="Gambar 4.jpeg" style="object-fit: cover; width: 100%; height: 100%; cursor: pointer;" alt="Foto 4"
-            data-bs-toggle="modal" data-bs-target="#foto4Modal">
-        </div>
+      <div class="carousel-item">
+        <img src="Gambar 4.jpeg" class="d-block w-100" alt="...">
       </div>
     </div>
-  </section>
-  <div class="modal fade" id="foto1Modal" tabindex="-1" aria-labelledby="foto1ModalLabel" aria-hidden="true">
-    <div class="modal-dialog modal-lg">
-      <div class="modal-content">
-        <div class="modal-header">
-          <h5 class="modal-title" id="foto1ModalLabel">Foto 1</h5>
-          <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-        </div>
-        <div class="modal-body">
-          <img src="Gambar 1.jpeg" style="width: 100%;" alt="Foto 1">
-          <p>Deskripsi untuk Foto 1</p>
-        </div>
-      </div>
-    </div>
-  </div>
-  <div class="modal fade" id="foto2Modal" tabindex="-1" aria-labelledby="foto2ModalLabel" aria-hidden="true">
-    <div class="modal-dialog modal-lg">
-      <div class="modal-content">
-        <div class="modal-header">
-          <h5 class="modal-title" id="foto2ModalLabel">Foto 2</h5>
-          <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-        </div>
-        <div class="modal-body">
-          <img src="Gambar 2.jpeg" style="width: 100%;" alt="Foto 2">
-          <p>Deskripsi untuk Foto 2</p>
-        </div>
-      </div>
-    </div>
-  </div>
-  <div class="modal fade" id="foto3Modal" tabindex="-1" aria-labelledby="foto3ModalLabel" aria-hidden="true">
-    <div class="modal-dialog modal-lg">
-      <div class="modal-content">
-        <div class="modal-header">
-          <h5 class="modal-title" id="foto3ModalLabel">Foto 3</h5>
-          <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-        </div>
-        <div class="modal-body">
-          <img src="/Gambar 3.jpeg" style="width: 100%;" alt="Foto 3">
-          <p>Deskripsi untuk Foto 3</p>
-        </div>
-      </div>
-    </div>
-  </div>
-  <div class="modal fade" id="foto4Modal" tabindex="-1" aria-labelledby="foto4ModalLabel" aria-hidden="true">
-    <div class="modal-dialog modal-lg">
-      <div class="modal-content">
-        <div class="modal-header">
-          <h5 class="modal-title" id="foto4ModalLabel">Foto 4</h5>
-          <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-        </div>
-        <div class="modal-body">
-          <img src="Gambar 4.jpeg" style="width: 100%;" alt="Foto 4">
-          <p>Deskripsi untuk Foto 4</p>
-        </div>
-      </div>
-    </div>
+    <button class="carousel-control-prev" type="button" data-bs-target="#carouselExample" data-bs-slide="prev">
+      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+      <span class="visually-hidden">Previous</span>
+    </button>
+    <button class="carousel-control-next" type="button" data-bs-target="#carouselExample" data-bs-slide="next">
+      <span class="carousel-control-next-icon" aria-hidden="true"></span>
+      <span class="visually-hidden">Next</span>
+    </button>
   </div>
 
   <section class="social-media container mt-5 text-center">
@@ -210,7 +149,7 @@
     <p class="copyright"><em>&copy;2024</em></p>
   </footer>
 
-  <script src="assets/bootstrap-5.3.3-dist/js/bootstrap.bundle.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 
 </html>
